# epub-generator

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: build.yml
epub_generator/: __init__.py  context.py  gen_asset.py  gen_chapter.py  gen_epub.py  gen_index.py  gen_nav.py  gen_part.py  gen_toc.py  hash.py  i18n.py  types.py  validate.py
epub_generator/data/: content.opf.jinja  nav.xhtml.jinja  part.xhtml.jinja  style.css.jinja  toc.ncx.jinja
epub_generator/generation/: gen_asset.py  gen_chapter.py  gen_content.py  gen_epub.py  gen_nav.py  gen_toc.py  xml_utils.py
scripts/: fix.sh  lint.sh  sync.sh
tests/: README.md  __init__.py  conftest.py  test_generate_epub.py  test_validate.py
tests/asset/: .gitkeep
