[project]
name = "epub-generator"
version = "0.0.1"
description = ""
authors = [
    {name = "Tao Zeyu",email = "i@taozeyu.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
